--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,7 @@ footer .cookies{
 }
 .songlist ul li{
     padding: 10px;
+    border-radius: 12px;
     border: 1px solid white;
     margin: 20px 0;
     /* gap: 50px; */
